added changes on structure and related work on international standards

--- a/sections/architecture.tex
+++ b/sections/architecture.tex
@@ -4,6 +4,10 @@
 % Architecture
 % 
 
-\section{Architecture}
+\section{Solution's Architecture}
+
+\subsection{Stakeholders}
+
+\subsection{Processes}
 
 
