--- a/sections/related-work.tex
+++ b/sections/related-work.tex
@@ -199,10 +199,30 @@ The importance of PMBOK for this thesis is related to its widely acceptance and 
 PMBOK presents processes for all phases of the life cycle of a project, being too extensive considering the theme of this thesis and the time-frame available. For this scope, we will only be able to consider a subset of all processes presented, being necessary, in the solution's architecture phase of this thesis, present a mapping between processes covered on PMBOK relating with processes of COBIT and ITIL.
 
 
+\subsection{International standards}
 
+In this section we will present the international standards that are referenced or important to complement the frameworks previously presented. These standards will allow us to design processes in conformance with practices that are considerer as the reference in some areas of project management.\par
+We will analyze the ISO/IEC 12207, an systems and software engineering international standard for Software life cycle processes. This standard will allow us to define the processes that are important to consider in the scope of this thesis. It will provide an high-level process reference for the complete life cycle of a software system\par
+Relating to COBIT, we have standards that are directly related to it, as the ISO/IEC 20000, a set of international standards for IT service management, and ISO/IEC 27000, a set of international standards for information security management systems. COBIT also relates with CMMI, the Capability Maturity Model Integration that is a framework for process improvement in business comprising models, appraisal methods, and training.\par
+For other standards more general to all frameworks we will present the ISO 31000, a set of standards that provide principles, framework and a process for managing risk, and ISO 19011, a international standard for providing guidelines for auditing management systems. This standards will complement complex areas of project management providing some additional and specific knowledge.
 
+\subsubsection{ISO/IEC 12207}  
 
+\subsubsection{ISO/IEC 20000} 
 
+\subsubsection{ISO/IEC 27000}
+
+\subsubsection{CMMI}
+
+\subsubsection{ISO 31000}
+
+\subsubsection{ISO 19011}
+
+\subsection{Market Solutions on Logical Application Architecture}
+
+\subsubsection{Project Management}
+
+\subsubsection{IT Service Management}
 
 
 
