added standards ISO/IEC 12207 and ISO/IEC 20000

--- a/sections/related-work.tex
+++ b/sections/related-work.tex
@@ -206,9 +206,51 @@ We will analyze the ISO/IEC 12207, an systems and software engineering internati
 Relating to COBIT, we have standards that are directly related to it, as the ISO/IEC 20000, a set of international standards for IT service management, and ISO/IEC 27000, a set of international standards for information security management systems. COBIT also relates with CMMI, the Capability Maturity Model Integration that is a framework for process improvement in business comprising models, appraisal methods, and training.\par
 For other standards more general to all frameworks we will present the ISO 31000, a set of standards that provide principles, framework and a process for managing risk, and ISO 19011, a international standard for providing guidelines for auditing management systems. This standards will complement complex areas of project management providing some additional and specific knowledge.
 
-\subsubsection{ISO/IEC 12207}  
+\subsubsection{ISO/IEC 12207}
 
-\subsubsection{ISO/IEC 20000} 
+ISO/IEC 12207:2008 establishes a common framework for software life cycle processes, with well-defined terminology, that can be referenced by the software industry. It contains processes, activities, and tasks that are to be applied during the acquisition of a software product or service and during the supply, development, operation, maintenance and disposal of software products.The purpose of this International Standard is to provide a defined set of processes to facilitate communication among acquirers, suppliers and other stakeholders in the life cycle of a software product.\par
+This standard combines the processes to be performed during the life cycle of a software project into seven groups . Each process is described in terms of its objectives and expected results and presents activities to be undertaken to achieve these same objectives. The processes are grouped in 7 groups, related to the phase they are applied during the software life cycle. All processes are listed in figure XXX.
+
+\begin{itemize}
+  \item Agreement processes
+  \item Organizational Project-Enabling Processes
+  \item Project Processes
+  \item Technical Processes
+  \item Software Implementation Processes
+  \item Software Support Processes
+  \item Software Reuse Processes 
+\end{itemize}
+
+ 
+\begin{figure}[t!]
+\centering
+\includegraphics[width=\textwidth]{img/ISO12207Processes.png}
+\caption{ISO/IEC 12207 processes}
+\end{figure}
+
+This standard may be used standalone or jointly with ISO/IEC 15288, and supplies a process reference model that supports process capability assessment in accordance with ISO/IEC 15504, a set of technical standards documents for the computer software development processes assessment.\par
+This standard is important for this thesis in the way it standardize the processes for the whole life cycle of the software, grouping the processes for a better understanding its scope. We will use this standard, specifically figure 7, to present the processes that make part of the scope of this thesis, after what we will relate them with the frameworks previously presented. 
+
+
+\subsubsection{ISO/IEC 20000}
+
+ISO/IEC 20000 corresponds to a standard on IT Service Management. Initially was developed to reflect best practice guidance contained in some frameworks like ITIL, COBIT or Microsoft operations. This standard in composed by 5 parts:
+
+\begin{itemize}
+  \item \textbf{ISO/IEC 20000-1:2011} -  Corresponds to the most relevant part of the ISO/IEC 20000 standard. It specifies requirements for the service provider to plan, establish, implement, operate, monitor, review, maintain and improve an SMS. The requirements include the design, transition, delivery and improvement of services to fulfill agreed service requirements.\par
+  \vspace{5mm}
+  \item \textbf{ISO/IEC 20000-2:2012} - Provides guidance on the application of service management systems (SMS) based on the requirements in ISO/IEC 20000-1. Enables organizations and individuals to interpret ISO/IEC 20000-1 more accurately, and therefore to use it more effectively. The guidance includes examples and suggestions to enable organizations to interpret and apply ISO/IEC 20000-1, including references to other parts of ISO/IEC 20000 and other relevant standards.\par
+  \vspace{5mm}
+  \item \textbf{ISO/IEC 20000-3:2012} - Useful for service providers, consultants and assessors. It includes practical guidance on scope definition, applicability and demonstration of conformity to the requirements in ISO/IEC 20000-1. Guidance on the different types of conformity assessment and assessment standards is included.\par
+  \vspace{5mm}
+  \item \textbf{ISO/IEC TR 20000-4:2010} - Facilitates the development of a process assessment model according to ISO/IEC 15504 process assessment principles. ISO/IEC 15504-1 describes the concepts and terminology used for process assessment. ISO/IEC 15504-2 describes the requirements for the conduct of an assessment and a measurement scale for assessing process capability.\par
+  \vspace{5mm}
+  \item \textbf{ISO/IEC TR 20000-5:2013} - Implementation plan providing guidance on how to implement a service management system (SMS) to fulfill the requirements of ISO/IEC 20000-1:2011. The intended users of ISO/IEC TR 20000-5:2013 are service providers, but it can also be useful for those advising service providers on how to implement an SMS.\par
+  \vspace{5mm}
+
+  This standard is a clear complement to the ITIL framework, providing a similar view for the framework previous presented but being more complete in terms of requirements identification and process assessment. ITIL lacks of a process assessment model and detailed implementation plans, being this standard a way to fulfill those problems.\par
+  
+\end{itemize}
 
 \subsubsection{ISO/IEC 27000}
 
@@ -217,6 +259,8 @@ For other standards more general to all frameworks we will present the ISO 31000
 \subsubsection{ISO 31000}
 
 \subsubsection{ISO 19011}
+
+
 
 \subsection{Market Solutions on Logical Application Architecture}
 
