--- a/sections/related-work.tex
+++ b/sections/related-work.tex
@@ -252,14 +252,42 @@ ISO/IEC 20000 corresponds to a standard on IT Service Management. Initially was 
   
 \end{itemize}
 
-\subsubsection{ISO/IEC 27000}
+\subsubsection{ISO/IEC 27000} - We need to define if it is really in the scope of this project
 
-\subsubsection{CMMI}
+\subsubsection{CMMI} - We need to define if it is really in the scope of this project
 
 \subsubsection{ISO 31000}
 
+ISO 31000 is a set of standards related to risk management. ISO 31000:2009, Risk management – Principles and guidelines, provides principles, framework and a process for managing risk. It can be used by any organization regardless of its size, activity or sector.Using ISO 31000 can help organizations increase the likelihood of achieving objectives, improve the identification of opportunities and threats and effectively allocate and use resources for risk treatment.\par
+In figure 8, we can observe the purposed framework by ISO 31000:2009, assisting the organization to integrate risk management into its overall management system. Many organizations have already frameworks for implementing risk management, that can be evaluated and reviewed against this international standard in order to check its adequacy. In figure 9 are presented the processes for Risk management implementation.\par
+
+\begin{figure}[h!]
+\centering
+\includegraphics[width=\textwidth]{img/ISO31000Framework.png}
+\caption{ISO 31000:2009 framework for Risk Management}
+\end{figure}
+
+\begin{figure}[b!]
+\centering
+\includegraphics[width=0.8\textwidth]{img/ISO31000RiskProcesses.png}
+\caption{ISO 31000:2009 Risk Management Processes}
+\end{figure}
+
+This standard cannot be used for certification purposes, in the way it doesn't provide guidance for internal or external audit programmes, but can be used to compare the risk management processes of the organization with international standard benchmarks.\par
+Risk management is a very complex area on project management. It is connected to the whole life cycle of a project and need to be controlled and assessed in many phases and by different forms. ISO/IEC 31010:2009, Risk management – Risk assessment techniques focuses on risk assessment. Risk assessment helps decision makers understand the risks that could affect the achievement of objectives as well as the adequacy of the controls already in place.\par
+The relevance of ISO 31000 for this thesis focuses on its orientation to an important and complex area of project and maintenance management, providing a framework for Risk management, as well as a set of processes to implement it. It is important to clearly define the scope of this standard related to this thesis, trying to reduce the complexity and increase its utility for the processes we pretend to design.
+
+
 \subsubsection{ISO 19011}
 
+This International Standard provides guidance on auditing management systems, including the principles of auditing, managing an audit programme and conducting management system audits, as well as guidance on the evaluation of competence of individuals involved in the audit process, including the person managing the audit programme, auditors and audit teams. It is applicable to all organizations that need to conduct internal or external audits of management systems or manage an audit programme.\par
+In figure 10 is presented the process flow for the management of an audit programme, described in this international standard. This process can be specially important for out thesis if we pretend to introduce the auditing processes in the scope of the processes to design. We can use the process flow presented in figure 10 to help designing a auditing process.
+
+\begin{figure}[b!]
+\centering
+\includegraphics[width=0.85\textwidth]{img/ISO19011AuditProcess.png}
+\caption{ISO 19011 process flow for the management of an audit programme}
+\end{figure}
 
 
 \subsection{Market Solutions on Logical Application Architecture}
